// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`liveview_form_for.html.leex 1`] = `
====================================options=====================================
parsers: ["eex"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<div>
  <%= f = form_for a %>
    <%= text_input f, :name %>
  </form>
  <div>
    <form></form>
  </div>
  <%= f = form_for b %>
    <%= text_input f, :name %>
  </form>
  <div>
    <div>
      <%= fs = form_for c %>
        <%= text_input f, :name %>
      </form>
    </div>
  </div>
</div>

=====================================output=====================================
<div>
  <%= f = form_for a %>
    <%= text_input f, :name %>
  </form>
  <div>
    <form></form>
  </div>
  <%= f = form_for b %>
    <%= text_input f, :name %>
  </form>
  <div>
    <div>
      <%= fs = form_for c %>
        <%= text_input f, :name %>
      </form>
    </div>
  </div>
</div>

================================================================================
`;

exports[`multiline.html.eex 1`] = `
====================================options=====================================
parsers: ["eex"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<div>
  <%= link
   %>
</div>

=====================================output=====================================
<div>
  <%= link %>
</div>

================================================================================
`;

exports[`only_html.html.eex 1`] = `
====================================options=====================================
parsers: ["eex"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<div class="ss   ss   "   >
  <h2
    >
    </h2></div>

=====================================output=====================================
<div class="ss ss">
  <h2></h2>
</div>

================================================================================
`;
